--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 nav {
-  background-color: #312F2F;
+  background-color: #201f1f;
   width: 100%;
   height: 8vh;
   display: -webkit-box;
@@ -117,6 +117,11 @@ nav .nav-links a:hover {
   background-size: cover;
 }
 
+.bg-dark {
+  -webkit-filter: brightness(0.1);
+          filter: brightness(0.1);
+}
+
 .title {
   position: absolute;
   top: 50%;
@@ -127,10 +132,95 @@ nav .nav-links a:hover {
   font-weight: 500;
   font-size: 50px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .title .type {
   color: #F22B29;
+}
+
+.about {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #FBF5F3;
+}
+
+.about h2 {
+  text-align: center;
+  color: #F22B29;
+}
+
+.about .line {
+  margin: 5px auto;
+  width: 50%;
+  height: 2px;
+  background-color: #F22B29;
+}
+
+.about .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about .info .col1, .about .info .col2 {
+  list-style: none;
+  margin: 10px;
+}
+
+.about .info .col1 li:before, .about .info .col2 li:before {
+  content: '>';
+  color: #F22B29;
+  margin-right: 5px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.about .items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about .progress-bar {
+  width: 200px;
+  height: 20px;
+  background-color: #FBF5F3;
+  border-radius: 10px;
+  position: relative;
+  margin-top: 30px;
+}
+
+.about .progress-bar .progress-title {
+  position: absolute;
+  color: #F22B29;
+  bottom: 100%;
+}
+
+.about .progress-bar .progress {
+  height: 100%;
+  background-color: #F22B29;
+  border-radius: 8px;
+  position: relative;
+  margin-right: auto;
+}
+
+.about .progress-bar .progress .progress-value {
+  font-size: 15px;
+  text-align: center;
 }
 
 footer {
@@ -138,7 +228,7 @@ footer {
   bottom: 0;
   height: 8vh;
   width: 100%;
-  background-color: #312F2F;
+  background-color: #201f1f;
   color: #FBF5F3;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -180,7 +270,7 @@ footer .copyright {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background-color: #312F2F;
+    background-color: #201f1f;
     z-index: 1;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
