--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 
 $PrimaryColor: #F22B29;
 $SecondaryColor: #FFC800;
-$BgColor: #312F2F;
+$BgColor: rgb(32, 31, 31);
 $TextColor: #FBF5F3;
 
 body{
@@ -100,6 +100,10 @@ nav{
     background-size: cover;
 }
 
+.bg-dark{
+    filter: brightness(0.1);
+}
+
 .title{
     position: absolute;
     top: 50%;
@@ -109,9 +113,83 @@ nav{
     font-weight: 500;
     font-size: 50px;
     text-transform: uppercase;
+    text-align: center;
 
     .type{
         color: $PrimaryColor;
+    }
+}
+
+.about{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $TextColor;
+
+    h2{
+        text-align: center;
+        color: $PrimaryColor;
+    }
+
+    .line{
+        margin: 5px auto;
+        width: 50%;
+        height: 2px;
+        background-color: $PrimaryColor;
+    }
+
+    .info{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .col1, .col2{
+            list-style: none;
+            margin: 10px;
+
+            li:before{
+                content: '>';
+                color: $PrimaryColor;
+                margin-right: 5px;
+                font-weight: 500;
+                font-size: 18px;
+            }
+        }
+    }
+
+    .items{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .progress-bar{
+        width: 200px;
+        height: 20px;
+        background-color: $TextColor;
+        border-radius: 10px;
+        position: relative;
+        margin-top: 30px;
+
+        .progress-title{
+            position: absolute;
+            color: $PrimaryColor;
+            bottom: 100%;
+        }
+
+        .progress{
+            height: 100%;
+            background-color: $PrimaryColor;
+            border-radius: 8px;
+            position: relative;
+            margin-right: auto;
+
+            .progress-value{
+                font-size: 15px;
+                text-align: center;
+            }
+        }
     }
 }
 
