--- a/style.css
+++ b/style.css
@@ -242,11 +242,9 @@ nav .nav-links a:hover {
 
 .projects .project {
   width: 350px;
-  height: 210px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background-color: rgba(242, 44, 41, 0.2);
-  padding: 10px;
   border-radius: 20px;
   text-decoration: none;
   margin: 10px;
@@ -254,26 +252,19 @@ nav .nav-links a:hover {
 
 .projects .project .img {
   width: 100%;
-  height: 90%;
+  height: 190px;
   background-size: cover !important;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .projects .project p {
   color: #F22B29;
   text-align: center;
   width: 100%;
-  font-size: 19px;
+  padding: 5px;
+  font-size: 17px;
   -webkit-transition: font-size 0.3s ease-in-out;
   transition: font-size 0.3s ease-in-out;
-}
-
-.projects .project-active {
-  width: 550px;
-  height: 320px;
-}
-
-.projects .project-active p {
-  font-size: 25px;
 }
 
 footer {
@@ -295,6 +286,26 @@ footer {
 
 footer .copyright {
   opacity: 0.8;
+}
+
+footer .social-icons a {
+  text-align: center;
+  display: inline-block;
+  text-decoration: none;
+  color: #FBF5F3;
+  width: 30px;
+  height: 30px;
+  line-height: 34px;
+  border-radius: 50%;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  font-size: 20px;
+  opacity: 0.8;
+}
+
+footer .social-icons a:hover {
+  color: #F22B29;
+  opacity: 1;
 }
 
 @media screen and (max-width: 1280px) {
@@ -330,6 +341,15 @@ footer .copyright {
   }
   nav .burger {
     display: inline-block;
+  }
+  .about .info li {
+    font-size: 14px;
+  }
+  .about .info li:before {
+    font-size: 15px;
+  }
+  .about .progress-bar {
+    width: 150px;
   }
 }
 
