--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url("//cdn.web-fonts.ge/fonts/archyedt-bold/css/archyedt-bold.min.css");
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Staatliches', 'ArchyEDT-Bold', sans-serif;
+    font-family: 'Bebas Neue', 'ArchyEDT-Bold', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -15,8 +15,9 @@
     --light: #f4f4f4;
     --light2: #d4d4d4;
     --heading-size: 32px;
-    --text-size: 24px;
+    --text-size: 22px;
     --body-width: 1024px;
+    --border: #2b2b2b;
 }
 
 body{
@@ -83,15 +84,15 @@ body:last-child{
 }
 
 .border{
-    border: 2px var(--dark) solid;
-    box-shadow: 4px 4px var(--dark);
+    border: 2px var(--border) solid;
+    box-shadow: 4px 4px var(--border);
     border-radius: 5px;
     transition: .2s;
 }
 
 .item.border:active,
 .btn.border:active{
-    box-shadow: 2px 2px var(--dark);
+    box-shadow: 2px 2px var(--border);
     transform: translate(2px, 2px);
 }
 
