--- a/style.scss
+++ b/style.scss
@@ -173,9 +173,8 @@ nav{
     }
 
     .item:hover{
-        .img{
-            transform: scale(0.95);
-        }
+        border: 2px var(--primary) solid;
+        box-shadow: 4px 4px var(--primary);
     }
 }
 
@@ -212,9 +211,6 @@ nav{
 
 .links{
     list-style: none;
-    // display: flex;
-    // flex-wrap: wrap;
-    // justify-content: space-between;
 
     a{
         text-decoration: none;
@@ -249,6 +245,46 @@ nav{
 
     li:not(:last-of-type){
         margin-bottom: 5px;
+    }
+}
+
+.contact .flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+        font-size: var(--text-size);
+
+        input, textarea{
+            background-color: var(--light2);
+            padding: 10px;
+            font-size: var(--text-size);
+            outline: none;
+        }
+
+        input:focus,
+        textarea:focus{
+            border: 2px var(--primary) solid;
+            box-shadow: 4px 4px var(--primary);
+        }
+
+        textarea{
+            width: 500px;
+            height: 200px;
+        }
+
+        label:last-of-type,
+        button{
+            margin-top: 20px !important;
+        }
+
+        button{
+            margin: auto;
+            width: 80px;
+        }
     }
 }
 
